2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (clearlooks_rounded_rectangle),
	(murrine_draw_lightborder):
	* src/murrine_draw.c (murrine_draw_inset),
	(murrine_draw_highlight_and_shade):
	* src/murrine_draw_rgba.c (murrine_draw_inset),
	(murrine_draw_highlight_and_shade):
	High roundness values are finally fixed!
	Try roundness = 10000000 (:-D), it should work.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/murrine.xml.in.in:
	Fixed a typo.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_entry):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_entry):
	* src/murrine_style.c (murrine_style_draw_shadow):
	* src/murrine_types.h:
	Use focus->color in draw_entry.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_menuitem):
	I guess this should fix menuitems with roundness = 1, even if I haven't
	seen those bugs (but the new code seems correct).

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_flat_box),
	(murrine_style_draw_shadow), (murrine_style_draw_box_gap),
	(murrine_style_draw_box), (murrine_style_draw_shadow_gap),
	(murrine_style_draw_focus):
	Started reducing duplicated params.corners initializations.
	Could break something, but it shouldn't.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	Started working on 0.90.1.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* TODO:
	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scrollbar_slider):
	Fixed the rendering bug on the scrollbar's slider by reducing the 
	roundness of the clipped area.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Removed shadows from comboboxentry's button.
	Feedback is appreciated.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>
