@@ -2051,13 +2051,9 @@ murrine_style_draw_focus (GtkStyle *style, GdkWindow *window, GtkStateType state
 			else
 				focus.type = MRN_FOCUS_BUTTON_FLAT;
 
-			/* This is a workaround for the bogus focus handling that
-			 * clearlooks has currently.
-			 * I truely dislike putting it here, but I guess it is better
-			 * then having such a visible bug. It should be removed in the
-			 * next unstable release cycle.  -- Benjamin
-			if (ge_object_is_a (G_OBJECT (widget), "ButtonWidget"))
-				focus.type = MRN_FOCUS_LABEL; */
+			/* Workaround for the panel. */
+			if (murrine_object_is_a (G_OBJECT (widget), "ButtonWidget"))
+				focus.type = MRN_FOCUS_LABEL;
 		}
 	}
 	else if (detail && g_str_has_prefix (detail, "treeview"))
