@@ -1,5 +1,15 @@
 2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_style.c (murrine_style_draw_focus):
+	* src/support.c (murrine_gtk_treeview_get_header_index),
+	(murrine_gtk_clist_get_header_index),
+	(murrine_special_get_ancestor), (murrine_get_parent_window),
+	(murrine_get_parent_bgcolor), (murrine_find_combo_box_widget),
+	(murrine_is_combo_box):
+	Fixed the focus on the gnome-panel.
+
+2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/cairo-support.c (clearlooks_rounded_rectangle),
 	(murrine_draw_lightborder):
 	* src/murrine_draw.c (murrine_draw_inset),
